[metadata]
name = centralcontrol
version = 0.0.1

[options]
packages = find:
include_package_data = True
install_requires =
    numpy
    paho-mqtt
    mpmath
python_requires = >=3.6
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    centralcontrol = centralcontrol:main
    wavelabs-relay-server = wavelabs_relay_server:main

[options.data_files]
lib/systemd/user = 
    data/systemd/centralcontrol@.service
lib/systemd/system = 
    data/systemd/wavelabs-relay.service
