[build-system]
requires = ["hatchling>=1.10.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "centralcontrol"
description = "instrument control backend"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = [
  "automation",
  "data",
  "science",
]
authors = [
  { name="Greyson Christoforo", email="grey@christoforo.net" },
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "numpy",
  "mpmath",
  "paho-mqtt",
  "psycopg",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/greyltc/centralcontrol"
Tracker = "https://github.com/greyltc/centralcontrol/issues"
Source = "https://github.com/greyltc/centralcontrol"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/centralcontrol/__about__.py"

[project.scripts]
centralcontrol = "centralcontrol.__main__:main"
wavelabs-relay-server = "wavelabs_relay_server:main"

[tool.hatch.build]
ignore-vcs = true
include = [
  "src/*.py",
  "data/*.json",
  "data/systemd"
]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.build.targets.wheel.shared-data]
"data" = "share/centralcontrol"
"data/systemd/centralcontrol@.service" = "lib/systemd/user/centralcontrol@.service"
"data/systemd/wavelabs-relay.service" = "lib/systemd/system/wavelabs-relay.service"

[tool.black]
line-length = 999999

[[tool.hatch.envs.test.matrix]]
python = ["310"]
