[metadata]
name = centralcontrol
version = 0.0.1

[options]
packages = find:
include_package_data = True
install_requires =
    pyvisa
    pyvisa-py
    numpy
    paho-mqtt
python_requires = >=3.6
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mqtt-server = centralcontrol.mqtt_server:main
    utility-handler = centralcontrol.utility_handler:main
    wavelabs-relay-server = wavelabs_relay_server:main

[options.data_files]
lib/systemd/user = 
    data/systemd/utility-handler.service
    data/systemd/mqtt-server.service
lib/systemd/system = 
    data/systemd/wavelabs-relay.service
